--- a/emily.html
+++ b/emily.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <header>
-             <h1><img src="logo.png"></head>h1>
+         <div class="caixa">
+            <h1><img src="logo.png"></head>h1>
 
           <nav>
                 <ul>
@@ -18,6 +19,30 @@
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
-        </header>
-    </body>
-</html>
+        </div>
+
+    </header>
+    <main>
+        <ul class="produtos">
+            <li>
+                <h2>Aproveite 3 meses de Premium</R1></h2>
+                <img src="cabelo.jpg">
+                <p class="produto-descricao">Depois,apenas R$ 16,90/mês.Cancele quando quiser</p>
+                <p class="produto-preco">R$ 50,00</p>
+            </li>
+            <li>
+                <h2>Music free</h2>
+                <img src="barba.jpg">
+                <p class="produto-descricao">ordem aleatória</p>
+                <p class="produto-preco">R$ 00,00</p>
+            </li>
+            <li>
+                <h2>Cabelo + Barba</h2>
+                <img src="cabelo+barba.jpg">
+                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
+                <p class="produto-preco">R$ 35,00</p>
+            </li>
+        </ul>
+    </main>
+  <body> 
+ <html>   
