--- a/emily.html
+++ b/emily.html
@@ -37,10 +37,10 @@
                 <p class="produto-preco">R$ 00,00</p>
             </li>
             <li>
-                <h2>Cabelo + Barba</h2>
+                <h2>Music Premium apenas para etudantes</h2>
                 <img src="cabelo+barba.jpg">
-                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
-                <p class="produto-preco">R$ 35,00</p>
+                <p class="produto-descricao">Sem propaganda, sem limites.Só música</p>
+                <p class="produto-preco">R$ 8,50</p>
             </li>
         </ul>
     </main>
